# vyos-fabric

./: README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 20240101000001_initial_schema.sql  20240101000002_seed_admin.sql  20240101000003_user_site_access.sql  20240101000004_split_name.sql  20240101000005_router_fields.sql  20240101000006_config_review.sql
backend/src/: auth.rs  error.rs  main.rs  state.rs
backend/src/models/: config.rs  firewall.rs  interfaces.rs  mod.rs  nat.rs  router.rs  services.rs  site.rs  system.rs  user.rs
backend/src/routes/: auth.rs  config.rs  firewall.rs  interfaces.rs  mod.rs  nat.rs  routers.rs  services.rs  sites.rs  system.rs  users.rs
backend/src/vyos/: client.rs  poller.rs
frontend/: next.config.ts  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: page.tsx
frontend/src/app/controller/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AuthGuard.tsx
frontend/src/components/controller/: ControllerShell.tsx
frontend/src/components/dashboard/: AlertItem.tsx  ChangeTray.tsx  CommandPalette.tsx  DashboardGrid.tsx  DashboardShell.tsx  DataTable.tsx  DetailDrawer.tsx  InfoCard.tsx  InterfaceStatsTile.tsx  KpiCard.tsx  LiveButton.tsx  NatRulesView.tsx  NetworkSpeedTile.tsx  RouterTable.tsx  RowActions.tsx  ServiceScaffold.tsx  Sidebar.tsx  SystemInfoPod.tsx  Toast.tsx  TopBar.tsx  tiles.tsx  (+1 more)
frontend/src/lib/: ConfigChanges.tsx  DashboardContext.tsx  DeviceContext.tsx  api.ts  data.ts  format.ts  slug.ts  types.ts
(+71 files in other folders)
